--- a/src/app/touchscreen/touchscreen.component.css
+++ b/src/app/touchscreen/touchscreen.component.css
@@ -1,4 +1,4 @@
-.container {
+.app-container {
   height: 100%;
   width: 100%;
 }
